# Project-AI

./: .bandit  .coverage  .cpanel.yml  .dockerignore  .editorconfig  .env  .env.example  .env.production.example  .env.temporal.example  .eslintrc.cjs  .eslintrc.js  .eslintrc.json  .flake8  .gitattributes  .gitignore  .gitignore.team-vault  .gitmodules  .gitmodules.local_backup  .markdownlint.json  .markdownlint.yaml  .pre-commit-config.yaml  .projectai.toml.example  .test-report-updater.config.json  =2.6.3  =80.9.0  ACCOUNT_LOCKOUT_IMPLEMENTATION_REPORT.md  AGENT-069-MISSION-COMPLETE.md  AGENT-072-link-generator.py  AGENT-073-MISSION-COMPLETE.md  AGENT-074-FINAL-MISSION-REPORT.md  AGENT-074-MISSION-COMPLETE.md  AGENT-075-QUICK-REFERENCE.md  AGENT-079-MISSION-SUMMARY.md  AGENT-081-FINAL-EXECUTION-REPORT.md  AGENT-086-MISSION-COMPLETE.md  AGENT-086-MISSION-SUMMARY.txt  AGENT-089-MISSION-SUMMARY.md  AGENT-089-POLICY-ENFORCEMENT-MATRIX.md  AGENT-090-COMPLETION-REPORT.md  AGENT-091-AUDIT-TRAIL-MATRIX.md  (+535 more)
StormDesk/tauri/src-tauri/: Cargo.toml  tauri.conf.json
agent_playbook/: CLAIMS_BOUNDARY.md  PROJECT_AI_HANDOFF_READINESS.md  README.md  pyproject.toml
agent_playbook/evidence/2026-06-10-owner-directed-integration/: human_decision_record.md
agent_playbook/governance/: CLASSIFIER_RULES.json  GOVERNANCE_CORE.json
agent_playbook/src/agent_playbook/: cli.py
agent_playbook/tools/: validate_agent_playbook.py
agent_playbook/usage/: grok-build-engineering-handoff.md
apps/desktop/: README.md  pyproject.toml
apps/desktop/tests/: conftest.py  test_api_supervisor.py  test_credentials.py  test_desktop.py  test_local_paths.py
apps/services/: README.md  pyproject.toml
apps/services/tests/: test_services.py
apps/swr-dashboard/: README.md  pyproject.toml
apps/swr-dashboard/tests/: test_app.py
crates/genesis-emitter/: Cargo.toml  README.md
crates/genesis-emitter/src/: lib.rs  main.rs
docs/governance/thirstys-standard-v3q-manifest/: README.md  SHA256SUMS  pyproject.toml  thirstys-standard-manifest.schema.json  validate_manifest.py
emergent-microservices/sovereign-data-vault/: .env.example  .gitlab-ci.yml  README.md  pyproject.toml  requirements.txt  setup.py
emergent-microservices/sovereign-data-vault/app/: __init__.py  config.py  logging_config.py  main.py  metrics.py  models.py  repository.py  routes.py  services.py  vault_logic.thirsty
emergent-microservices/sovereign-data-vault/docs/: API.md  ARCHITECTURE.md  FAILURE_MODES.md  PERFORMANCE.md  RUNBOOK.md  SECURITY.md
emergent-microservices/sovereign-data-vault/kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  network-policy.yaml  pdb.yaml  secret.yaml  service-monitor.yaml  service.yaml
emergent-microservices/sovereign-data-vault/tests/: __init__.py  test_main.py  test_routes.py  test_security.py  test_services.py
engines/waterfall_native/: Cargo.toml
engines/waterfall_native/src/: lib.rs  main.rs
integrations/cross-domain-synthesis-service/: .env.example  .gitlab-ci.yml  README.md  pyproject.toml  setup.py
integrations/cross-domain-synthesis-service/app/: __init__.py  config.py  errors.py  health.py  logging_config.py  main.py  metrics.py  middleware.py  models.py  repository.py  routes.py  services.py
integrations/cross-domain-synthesis-service/docs/: API.md  ARCHITECTURE.md  FAILURE_MODES.md  PERFORMANCE.md  RUNBOOK.md  SECURITY.md
integrations/cross-domain-synthesis-service/kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  network-policy.yaml  pdb.yaml  secret.yaml  service-monitor.yaml  service.yaml
integrations/cross-domain-synthesis-service/tests/: conftest.py  test_main.py  test_routes.py  test_services.py
integrations/the-decision-core/: .env.example  .gitlab-ci.yml  README.md  pyproject.toml  setup.py
integrations/the-decision-core/app/: __init__.py  config.py  errors.py  health.py  logging_config.py  main.py  metrics.py  middleware.py  models.py  repository.py  routes.py  services.py
integrations/the-decision-core/docs/: API.md  ARCHITECTURE.md  FAILURE_MODES.md  PERFORMANCE.md  RUNBOOK.md  SECURITY.md
integrations/the-decision-core/kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  network-policy.yaml  pdb.yaml  secret.yaml  service-monitor.yaml  service.yaml
integrations/the-decision-core/tests/: conftest.py  test_main.py  test_routes.py  test_services.py
integrations/the-logic--perception-layer/: .env.example  .gitlab-ci.yml  README.md  pyproject.toml  setup.py
integrations/the-logic--perception-layer/app/: config.py  errors.py  health.py  logging_config.py  main.py  metrics.py  middleware.py  models.py  repository.py  routes.py  services.py
integrations/the-logic--perception-layer/docs/: API.md  ARCHITECTURE.md  FAILURE_MODES.md  PERFORMANCE.md  RUNBOOK.md  SECURITY.md
integrations/the-logic--perception-layer/kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  network-policy.yaml  pdb.yaml  secret.yaml  service-monitor.yaml  service.yaml
integrations/the-logic--perception-layer/tests/: __init__.py  conftest.py  test_main.py  test_routes.py  test_services.py
recovery/normalized/: deploy.sh  pyproject.toml  taar.toml
src/utf/: README.md  __init__.py  pyproject.toml
src/utf/docs/: CANONICAL_STACK.md  GREAT_WELLS.md  JS_PYTHON_PARITY.md  PACKAGES_AND_GREAT_WELLS.md  PSIA_SPEC.md  SACRED_TEXTS.md  SHADOW_THIRST_SPEC.md  TARL_BOUNDARY.md  THIRSTY_CONFORMANCE.md  THIRSTY_EBNF_GRAMMAR.md  THIRSTY_ERROR_CODES.md  THIRSTY_LANG_SPEC.md  THIRSTY_MODULE_SYSTEM.md  THIRSTY_RUNTIME_SEMANTICS.md  THIRSTY_STANDARD_LIBRARY.md  THIRSTY_TYPE_SYSTEM.md  THIRST_MANIFESTO.md  THIRST_OF_GODS_SPEC.md  TRIUMVIRATE_SPEC.md  TSCG_B_ROLE.md  TSCG_ROLE.md
src/utf/examples/: context.json  flavor.thirsty  gods.thirstofgods  hello.thirsty  namespace_imports.thirsty  policy.tarl  promote.shadowthirst
src/utf/shadow_thirst/: __init__.py  cli.py  core.py
src/utf/tarl/: __init__.py  cli.py  core.py
src/utf/tests/: conftest.py  test_package_gallery.py  test_properties.py  test_shadow_thirst.py  test_tarl.py  test_thirsty_flavor.py  test_thirsty_lang.py  test_tscg.py
(+13783 files in other folders)
