[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-ai"
version = "1.0.0"
description = "Comprehensive AI assistant with advanced features"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "Project AI Team"}]
keywords = ["ai", "assistant", "pyqt6", "machine-learning"]
dynamic = ["scripts"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Android",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: JavaScript",
    "Programming Language :: Java",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Desktop Environment",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    "Flask>=3.0.0",
    "scikit-learn>=1.0.0",
    "geopy>=2.0.0",
    "cryptography>=46.0.6",
    "openai>=0.27.0",
    "python-dotenv>=1.2.2",
    "requests>=2.32.4",
    "numpy>=1.20.0",
    "pandas>=1.0.0",
    "matplotlib>=3.5.0",
    "PyPDF2>=3.0.0",
    "passlib>=1.7.0",
    "bcrypt>=5.0.0",
    "httpx>=0.24.0",
    "defusedxml>=0.7.0",
    "typer>=0.9.0",
    "rich>=13.7.0,<14.0.0",
    "temporalio>=1.5.0",
    "protobuf>=4.0.0",
    "PyYAML>=6.0.0",
    "pyreadline3>=3.5.4; platform_system == 'Windows'",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/IAmSoThirsty/Project-AI"
Repository = "https://github.com/IAmSoThirsty/Project-AI"
Issues = "https://github.com/IAmSoThirsty/Project-AI/issues"

[tool.ruff]
# Exclude markdown documentation files from linting
exclude = [
    "*.md",
    "node_modules",
    ".venv",
    ".venv_airllm",
    "venv",
    "__pycache__",
    ".git",
    "build",
    "dist",
    "data",
]

# Line length for black compatibility
line-length = 88

# Target Python version
target-version = "py312"

[tool.ruff.lint]
# Select rules to check
select = [
    "E",      # Errors
    "W",      # Warnings
    "F",      # Pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
]

# Ignore specific rules
ignore = [
    "E501",   # Line too long (handled by formatter)
    "D",      # Skip all pydocstyle rules for now
    "SIM105", # Suppress contextlib suggestions
    "N807",   # __init__ in documentation examples (INTEGRATION_GUIDE.py)
    "N802",   # eventFilter is a PyQt6 method name that can't be changed
    "SIM102", # Preserve staged governance/audit guard readability
    "N818",   # Semantic exception names include *Violation, *Denied, *Signal
    "N999",   # Legacy/tool filesystem names include hyphens
]

[tool.ruff.lint.per-file-ignores]
"e2e/conftest.py" = ["E402"]
"atlas/core/graph/temporal_graph.py" = ["E402"]
"examples/temporal/*.py" = ["E402"]
"gradle-evolution/gradle_integration.py" = ["E402"]
"integrations/openclaw/capability_registry.py" = ["E402"]
"integrations/thirsty_lang_complete/demo.py" = ["E402"]
"scripts/register_legion_moltbook.py" = ["E402"]
"scripts/run_security_worker.py" = ["E402"]
"tests/test_full_integration.py" = ["E402"]
"tarl/__init__.py" = ["E402"]
"atlas/analysis/sensitivity_analyzer.py" = ["N806"]
"src/app/core/hydra_50_analytics.py" = ["N803", "N806"]
"src/app/core/sensor_fusion.py" = ["N806", "E741"]
"SOVEREIGN-WAR-ROOM/swr/crypto.py" = ["SIM103"]
"SOVEREIGN-WAR-ROOM/swr/governance.py" = ["SIM116"]
"atlas/simulation/monte_carlo_engine.py" = ["SIM103"]
"e2e/scenarios/test_memory_knowledge_e2e.py" = ["SIM117"]
"gradle-evolution/api/documentation_generator.py" = ["SIM103"]
"gradle-evolution/constitutional/temporal_law.py" = ["SIM103"]
"gradle-evolution/ir/ir_executor.py" = ["SIM116"]
"scripts/automation/complexity_analysis.py" = ["SIM101"]
"scripts/validate_index_names.py" = ["SIM108"]
"src/app/core/governance_mode.py" = ["UP042"]
"src/app/core/governance_outcomes.py" = ["UP042"]
"src/app/core/interfaces.py" = ["B027"]
"src/app/core/invariant_severity.py" = ["UP042"]
"src/app/infrastructure/networking/spectrum_analyzer.py" = ["SIM116"]
"src/app/privacy/anti_tracker.py" = ["SIM103"]
"src/app/security/advanced/mfa_auth.py" = ["SIM103"]
"src/app/security/advanced/privacy_ledger.py" = ["SIM101"]
"src/app/security/chimera/chimera.py" = ["UP031"]
"src/utf/thirsty_lang/checker.py" = ["SIM103"]
"src/utf/thirsty_lang/typesys.py" = ["SIM109"]
"tarl/stdlib/__init__.py" = ["SIM115"]
"temporal/workflows/atomic_security_activities.py" = ["N817"]
"tests/test_path_security.py" = ["SIM117"]
"tests/test_sovereign_messaging.py" = ["SIM117"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--strict-markers -v"
pythonpath = ["src", "src/utf"]
filterwarnings = [
    "ignore::DeprecationWarning:passlib",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "chaos: Chaos engineering tests",
    "slow: Slow-running integration or soak tests",
    "load: Load and soak tests",
    "soak: Soak / endurance tests",
    "timeout: Tests with an explicit timeout requirement",
]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
