[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "project-ai-desktop"
version = "0.0.3"
description = "Read-only PyQt6 operator desktop for Project-AI development"
readme = "README.md"
requires-python = "==3.12.10"
license = "MIT"
dependencies = [
    "PyQt6>=6.8.0",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Win32 (MS Windows)",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
build = ["pyinstaller>=6.11.0"]

[project.scripts]
project-ai-desktop = "project_ai_desktop.app:entrypoint"

[tool.hatch.build.targets.wheel]
packages = ["src/project_ai_desktop"]
