[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "project-ai-service-host"
version = "0.0.2"
description = "Read-only health adapters for Project-AI development services"
readme = "README.md"
requires-python = "==3.12.10"
license = "MIT"
dependencies = [
    "fastapi>=0.115.0",
    "project-ai-arbiter",
    "project-ai-atlas",
    "project-ai-kernel",
    "project-ai-rlp",
    "project-ai-swr",
    "uvicorn[standard]>=0.34.0",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3.12",
]

[tool.hatch.build.targets.wheel]
packages = ["src/project_ai_services"]
