[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "project-ai-swr-dashboard"
version = "0.0.2"
description = "Flask web dashboard for the Project-AI Sovereign War Room (SWR) — J3.8 port"
readme = "README.md"
requires-python = "==3.12.10"
license = "MIT"
dependencies = [
    "flask>=3.0.0",
    "project-ai-swr",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Win32 (MS Windows)",
    "Programming Language :: Python :: 3.12",
    "Framework :: Flask",
]

[project.optional-dependencies]
test = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]

[project.scripts]
project-ai-swr-dashboard = "project_ai_swr_dashboard.app:entrypoint"

[tool.hatch.build.targets.wheel]
packages = ["src/project_ai_swr_dashboard"]
