# (Sovereign Project Architect)            [2026-04-09 04:26]
#                                          Status: Active

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-ai"
version = "1.0.1"
description = "A constitutionally governed, sovereign-grade AI platform with cryptographic audit trails and enforced ethical behavior"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{name = "Project AI Team"}]
keywords = ["ai", "assistant", "pyqt6", "machine-learning", "constitutional-ai", "asimov-laws", "cryptographic-audit", "ethical-ai", "open-source", "governance"]
dynamic = []

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Android",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: JavaScript",
    "Programming Language :: Java",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Desktop Environment",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    "fastapi>=0.135.3",
    "uvicorn>=0.44.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.0.1",
    "typer>=0.9.4",
    "rich>=13.7.1",
    "setuptools>=45.0.0,<82.0.0",
    "gunicorn>=25.3.0",
    "sqlalchemy>=2.0.49",
    "alembic>=1.18.4",
    "python-multipart>=0.0.22",
    "python-jose[cryptography]>=3.5.0",
    "passlib>=1.7.4",
    "bcrypt>=5.0.0",
    "starlette>=0.50.0",
    "cryptography>=46.0.7",
    "asn1crypto>=1.5.1",
    "httpx>=0.28.1",
    "requests>=2.33.1",
    "rfc3161ng>=2.1.3",
    "pyasn1>=0.6.1",
    "cbor2>=5.9.0",
    "jsonschema>=4.23.0",
    "PyYAML>=6.0.2",
    "ipfshttpclient>=0.8.0a2",
    "boto3>=1.42.87",
    "prometheus-client>=0.22.0",
    "grafana-client>=5.0.1",
    "Flask>=3.1.3",
    "flask-socketio>=5.6.1",
    "python-socketio>=5.14.1",
    "eventlet>=0.40.3",
    "pillow>=11.2.1",
    "temporalio>=1.7.2",
    "protobuf>=4.0.0",
    "PyQt6>=6.11.0",
    "scikit-learn>=1.6.0",
    "geopy>=2.4.0",
    "openai>=1.0.0",
    "numpy>=2.2.0",
    "pandas>=2.2.0",
    "matplotlib>=3.9.0",
    "PyPDF2>=3.0.0",
    "defusedxml>=0.7.0",
]

[project.scripts]
taar = "taar.cli:cli_main"

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=1.3.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "pip-tools>=7.4.0",
]
taar = [
    "rich>=13.0.0",
    "watchdog>=3.0.0",
]
ml = [
    "torch>=2.11.0,<2.12.0",
    "transformers>=4.48.0",
    "accelerate>=1.4.0",
]
optional = [
    "opencv-python-headless>=4.10.0",
    "openai-whisper>=20240930",
    "pydub>=0.25.0",
    "redis>=5.2.0",
]

[project.urls]
Homepage = "https://github.com/IAmSoThirsty/Project-AI"
Repository = "https://github.com/IAmSoThirsty/Project-AI"
Issues = "https://github.com/IAmSoThirsty/Project-AI/issues"

[tool.ruff]
# Exclude markdown documentation files from linting
exclude = [
    "*.md",
    "node_modules",
    ".venv",
    "venv",
    "__pycache__",
    ".git",
    "build",
    "dist"
]

# Line length for black compatibility (Team Delta: standardized to 100)
line-length = 100

# Target Python version
target-version = "py311"

[tool.ruff.lint]
# Select rules to check
select = [
    "E",      # Errors
    "W",      # Warnings
    "F",      # Pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
]

# Ignore specific rules
ignore = [
    "E501",   # Line too long (handled by formatter)
    "D",      # Skip all pydocstyle rules for now
    "SIM105", # Suppress contextlib suggestions
    "N807",   # __init__ in documentation examples (INTEGRATION_GUIDE.py)
    "N802",   # eventFilter is a PyQt6 method name that can't be changed
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = "test_*.py"
addopts = "-v --strict-markers -m 'not weekly'"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "load: Load tests",
    "chaos: Chaos tests",
    "soak: Soak tests",
    "slow: Slow-running tests",
    "weekly: Weekly stress tests (1000-scenario constitutional tests)",
    "daily: Daily regression tests (default)",
    "hourly: Fast smoke tests for hourly rotation",
    "timeout: Tests with custom timeout values",
    "governance: Governance and constitutional tests",
    "security: Security and attack simulation tests",
    "kernel: Core kernel and intelligence tests",
    "tarl: TARL orchestration tests",
    "psia: PSIA (Planetary Security Intelligence Agency) tests",
    "web: Web backend/frontend/API tests",
    "temporal: Temporal system tests",
]
filterwarnings = [
    "ignore::DeprecationWarning:passlib",
]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
